// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshots should match snapshot with child input element having same name as provided 1`] = `
<fieldset id="fkui-vue-element-0001" class="fieldset">
  <legend class="label fieldset__label">
    <!--v-if-->
    <!--v-if-->
  </legend>
  <!--v-if-->
  <!--v-if-->
  <div class="fieldset__content">
    <div class="radio-button"><input id="fkui-vue-element-0002" type="radio" class="radio-button__input" name="sameName" value="some value"><label class="radio-button__label" for="fkui-vue-element-0002">
        <!--v-if-->
      </label></div>
  </div>
</fieldset>
`;

exports[`snapshots should match snapshot with default classes and filled slots 1`] = `
<fieldset
  class="fieldset"
  id="someId"
>
  <legend
    class="label sr-only"
  >
    
    
    Label
    
    
    <!--v-if-->
    
    
    Description
    
    
    
    
    Error message
    
    
  </legend>
  <!--v-if-->
  
  <div
    class="label"
  >
    <span
      aria-hidden="true"
    >
      
      
      Label
      
      
    </span>
  </div>
  
  
  Tooltip
  
  
  <div
    aria-hidden="true"
    class="label fieldset__label"
  >
    
    
    Description
    
    
    
    
    Error message
    
    
  </div>
  
  <div
    class="fieldset__content"
  >
    
    
    Content
    
    
  </div>
</fieldset>
`;

exports[`snapshots should match snapshot with horizontal layout 1`] = `
<fieldset id="someId" class="fieldset">
  <legend class="label fieldset__label">
    <!--v-if-->
    <!--v-if-->
  </legend>
  <!--v-if-->
  <!--v-if-->
  <div class="fieldset__content"></div>
</fieldset>
`;

exports[`snapshots should match snapshot with indentation 1`] = `
<fieldset
  class="fieldset radio-button-group"
  id="fkui-vue-element-0001"
>
  <legend
    class="label fieldset__label"
  >
    
    
    <!--v-if-->
    
    
    
    <!--v-if-->
    
  </legend>
  <!--v-if-->
  <!--v-if-->
  <div
    class="fieldset__content radio-button-group__content"
  >
    
    
    <div
      class="indent"
    >
      <div
        class="radio-button"
      >
        <input
          class="radio-button__input"
          id="fkui-vue-element-0002"
          name="foo"
          type="radio"
          value="bar"
        />
        <label
          class="radio-button__label"
          for="fkui-vue-element-0002"
        >
          
          
          <!--v-if-->
        </label>
      </div>
    </div>
    
    
  </div>
</fieldset>
`;
